--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 	
 	
-<link rel="shortcut icon" href="img/favicon-32x32.png" type="image/png" />
+<link rel="shortcut icon" href="img/siteicon.jpeg" type="image/png" />
 
 	
 
@@ -207,7 +207,7 @@ onload='renderMathInElement(document.body);'></script>
 			
 
 <div class="font-serif text-medium-red-violet-400 pt-3">
-	Tokiwa-iro is the theme color of this site.
+	The world is not perfect, but it is not that bad.
 </div>
 <hr  class="pt-2"/>
 
@@ -303,7 +303,7 @@ onload='renderMathInElement(document.body);'></script>
 
 <div class="flex flex-wrap-reverse md:justify-end content-end md:content-start justify-start items-start   max-h-16">
 	
-	<a href='http://github.com/' target="_blank" class="github icon pl-1 text-eucalyptus-400 hover:text-java-400" title="github link" rel="noopener"
+	<a href='https://github.com/DeerDean' target="_blank" class="github icon pl-1 text-eucalyptus-400 hover:text-java-400" title="github link" rel="noopener"
 		aria-label="follow on github——Opens in a new window">
 		
 		<div class="fill-current h-8 w-8">
@@ -324,7 +324,7 @@ onload='renderMathInElement(document.body);'></script>
 		Built with Hugo and theme <a 
 			href="https://github.com/heyeshuang/hugo-theme-tokiwa">Tokiwa</a>.
 			<br />
-			12 pages, 1154 words in total.
+			12 pages, 1007 words in total.
 	</div>
 </div>
 			</div>
