--- a/about/index.html
+++ b/about/index.html
@@ -283,7 +283,7 @@ onload='renderMathInElement(document.body);'></script>
 <hr />
 <div class="pb-2">
     <script src="https://utteranc.es/client.js"
-        repo="DeerDean/blogcomments"
+        repo="DeerDean/deerdean.github.io"
         issue-term="pathname"
         theme="github-light"
         crossorigin="anonymous"
