--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="cn">
 
 <head>
+	<script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	
@@ -381,6 +382,10 @@ onload='renderMathInElement(document.body);'></script>
 			href="https://github.com/heyeshuang/hugo-theme-tokiwa">Tokiwa</a>.
 			<br />
 			16 pages, 2402 words in total.
+			<br />
+			<span id="busuanzi_container_site_pv">本站总访问量<span id="busuanzi_value_site_pv"></span>次</span> 
+			<br />
+			<span id="busuanzi_container_site_uv">访客数<span id="busuanzi_value_site_uv"></span>人次</span>
 	</div>
 </div>
 			</div>
