--- a/about/index.html
+++ b/about/index.html
@@ -256,7 +256,9 @@ onload='renderMathInElement(document.body);'></script>
 	<div class="text-sm text-gray-500 leading-tight a-gray">
 		© DeerDean
 		<br />
-		Built with Hugo and theme <a href="https://github.com/heyeshuang/hugo-theme-tokiwa">Tokiwa</a>. 1 words in this page.
+		Built with Hugo and theme <a href="https://github.com/heyeshuang/hugo-theme-tokiwa">Tokiwa</a>. 
+		<br />
+		1 words in this page.
 		<br />
 		<span id="busuanzi_container_site_pv">
 			本站总访问量<span id="busuanzi_value_site_pv"><i class="fa fa-spinner fa-spin"></i></span>次
@@ -289,7 +291,7 @@ onload='renderMathInElement(document.body);'></script>
     
     
     <a class="flex-grow-0" href="/post/20220609substrate-runtime/">
-        学习Substrate - Runtime
+        初识Substrate - Runtime
         <svg class="fill-current inline-block h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24"
             height="24">
             <path fill="none" d="M0 0h24v24H0z" />
