--- a/series/index.html
+++ b/series/index.html
@@ -260,7 +260,7 @@ onload='renderMathInElement(document.body);'></script>
 
 <div class="flex flex-wrap-reverse md:justify-end content-end md:content-start justify-start items-start   max-h-16">
 	
-	<a href='https://github.com/DeerDean' target="_blank" class="github icon pl-1 text-eucalyptus-400 hover:text-java-400" title="github link" rel="noopener"
+	<a href='https://github.com/LeviDean' target="_blank" class="github icon pl-1 text-eucalyptus-400 hover:text-java-400" title="github link" rel="noopener"
 		aria-label="follow on github——Opens in a new window">
 		
 		<div class="fill-current h-8 w-8">
